Fixed links and some blog changes

--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -3,7 +3,7 @@ const socialLinks = [
     {
         text: "linkedin",
         icon: "fa-brands fa-linkedin",
-        link: "/https://www.linkedin.com/in/ashutosh-patkar/"
+        link: "https://www.linkedin.com/in/ashutosh-patkar/"
     },
     {
         text: "github",
