Map reduce project added

--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -1,6 +1,12 @@
 ---
 const projects = [
     {
+        "name": "MapReduce",
+        "url": "https://github.com/Holmes7/MapReduce",
+        "description": "A simplified distributed MapReduce system built from scratch in Go, featuring a coordinator and multiple workers. Handles task distribution, fault tolerance, and parallel processing, resembling the concepts from the classic MapReduce paper.",
+        "tags": ["distributed-systems", "go"]
+    },
+    {
         "name": "Random Mashup Generator",
         "url": "https://github.com/Holmes7/Random-Mashup-Generator",
         "description": "A web application developed with TypeScript and ReactJS, designed to automate the process of selecting random coding problems of a specific difficulty level that remain unsolved by a group of users.",
