Added coalesce blog and papers section

--- a/src/components/ProjectList.astro
+++ b/src/components/ProjectList.astro
@@ -3,7 +3,7 @@ const projects = [
     {
         "name": "MapReduce",
         "url": "https://github.com/Holmes7/MapReduce",
-        "description": "A simplified distributed MapReduce system built from scratch in Go, featuring a coordinator and multiple workers. Handles task distribution, fault tolerance, and parallel processing, resembling the concepts from the classic MapReduce paper.",
+        "description": "A simplified distributed MapReduce system built from scratch in Go, with the goal of gaining a deep understanding of the fundamental challenges it addresses. Handles task distribution, fault tolerance, and parallel processing, resembling the concepts from the classic MapReduce paper.",
         "tags": ["distributed-systems", "go"]
     },
     {
