--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,12 +5,14 @@ import HomeBlog from "../components/HomeBlog.astro";
 import CP from "../components/CP.astro";
 import ProjectList from "../components/ProjectList.astro";
 import HomeProjects from "../components/HomeProjects.astro";
+import Papers from "../components/Papers.astro";
 ---
 <BaseLayout>
 <section class="text-lg flex flex-col gap-16">
     <Hero />
     <HomeBlog />
     <HomeProjects />
+    <Papers />
     <CP />
 </section>
 </BaseLayout>
