--- a/src/components/CP.astro
+++ b/src/components/CP.astro
@@ -10,6 +10,6 @@ const objList = [
     <h2 class="text-2xl text-green-500">Competitive Programming</h2>
     <p>During my time at IIT Kharagpur, I had the opportunity to explore a wide range of subjects. Among them, competitive programming captured my interest the most. Some of my achievements in that domain are</p>
     <ul class="flex flex-col gap-1 list-disc list-inside marker:text-orange-400">
-        {objList.map((obj) => <li class="pl-3">{obj}</li>)}
+        {objList.map((obj) => <li class="pl-3 text-base">{obj}</li>)}
     </ul>
 </section>
