--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -4,5 +4,5 @@
 <div>
     <h1 class="text-3xl mb-8 bg-gradient-to-r from-yellow-500 to-orange-700 text-transparent bg-clip-text">Hey, I am Ashutosh</h1>
     <p class="mb-5">I have a knack for solving problems, especially in the world of software engineering.</p>
-    <p>I am currently working as a <span class="text-white font-black">software engineer</span> at Mobilewalla, engaging with Scala, AWS and Apache Spark. My academic background includes a B.Tech degree from <span class="text-white font-black">IIT Kharagpur</span>.</p>
+    <p>I am currently working as a <span class="text-white font-black">software engineer at PayPal</span>. My academic background includes a B.Tech degree from <span class="text-white font-black">IIT Kharagpur</span>.</p>
 </div>
