--- a/src/components/CP.astro
+++ b/src/components/CP.astro
@@ -2,14 +2,13 @@
 const objList = [
     "ICPC Asia West Continent Finalist",
     "Candidate Master on Codeforces",
-    "5 star on Codechef",
-    "Won T-Shirts in competitions like Facebook Hacker Cup and CodeChef Snackdown"
+    "5 star on Codechef"
 ]
 ---
 <section class="flex flex-col gap-8 mb-5">
     <h2 class="text-2xl text-green-500">Competitive Programming</h2>
     <p>During my time at IIT Kharagpur, I had the opportunity to explore a wide range of subjects. Among them, competitive programming captured my interest the most. Some of my achievements in that domain are</p>
     <ul class="flex flex-col gap-1 list-disc list-inside marker:text-orange-400">
-        {objList.map((obj) => <li class="pl-3 text-base">{obj}</li>)}
+        {objList.map((obj) => <li class="pl-3 text-lg">{obj}</li>)}
     </ul>
 </section>
