--- a/src/components/Papers.astro
+++ b/src/components/Papers.astro
@@ -10,6 +10,6 @@ const objList = [
     <h2 class="text-2xl text-green-500 mb-6">Papers I've Read</h2>
     <p class="mb-5">I still read books and watch course videos, but I've also been checking out some research papers in computer science to see things from a different angle. Here's what I've looked into lately.</p>
     <ul class="flex flex-col gap-1 list-disc list-inside marker:text-orange-400 pl-4">
-        {objList.map((obj) => <li><a class="text-base underline underline-offset-4 decoration-1 hover:decoration-cyan-300 hover:decoration-2" href={obj.link}>{obj.title}</a></li>)}
+        {objList.map((obj) => <li><a class="text-lg underline underline-offset-4 decoration-1 hover:decoration-cyan-300 hover:decoration-2" href={obj.link}>{obj.title}</a></li>)}
     </ul>
 </section>
