--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -4,7 +4,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 // future layout will be blog description etc on left, single col and all tags on right to click on
 ---
 <BaseLayout>
-    <section class="mx-auto p-5">
+    <section class="mx-auto p-5 max-w-3xl">
         <PostList />
     </section>
 </BaseLayout> 
