--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,9 +8,8 @@ import HomeProjects from "../components/HomeProjects.astro";
 import Papers from "../components/Papers.astro";
 ---
 <BaseLayout>
-<section class="text-lg flex flex-col gap-16">
+<section class="text-xl flex flex-col gap-16">
     <Hero />
-    <HomeBlog />
     <HomeProjects />
     <Papers />
     <CP />
