--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,7 +18,7 @@ const navLinks = [
     }
 ]
 ---
-<header class="my-7 text-lg font-bold">
+<header class="my-7 text-xl font-bold">
     <nav class="flex justify-center gap-8">
         { navLinks.map((obj) => <a class="decoration-sky-300 decoration-2 underline-offset-8 hover:underline" href={obj.link}>{obj.text}</a>)}
     </nav>
