--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -10,12 +10,15 @@ import Footer from "../components/Footer.astro";
 		<meta name="generator" content={Astro.generator} />
 		<title>Ashutosh Patkar</title>
 		<script src="https://kit.fontawesome.com/dd0233f433.js" crossorigin="anonymous"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap" rel="stylesheet">
 	</head>
 	<!-- bg-[radial-gradient(ellipse_at_center,_var(--tw-gradient-stops))] from-gray-700 via-gray-900 to-black
 	bg-gradient-to-tl from-gray-700 via-gray-900 to-black
 	bg-gradient-to-tl from-stone-700 via-gray-800 to-gray-900
 -->
-	<body class="bg-gradient-to-tl from-stone-700 via-gray-800 to-gray-900 min-h-screen flex flex-col text-gray-300 font-monaco max-w-screen-xl mx-auto px-7">
+	<body class="tracking-wide bg-gradient-to-tl from-stone-700 via-gray-800 to-gray-900 min-h-screen flex flex-col text-gray-300 font-comic max-w-screen-xl mx-auto px-7">
 		<Header />
 		<div class="flex-grow pb-4 border-b-2">
 			<slot/>
