--- a/src/layouts/PostLayout.astro
+++ b/src/layouts/PostLayout.astro
@@ -6,9 +6,9 @@ const options = { day: 'numeric', month: 'long', year: 'numeric' };
 const date = new Date(frontmatter.date).toLocaleDateString('en-US', options);
 ---
 <BaseLayout>
-    <article class="max-w-3xl mx-auto p-5 border-t-2 pt-8 prose-h2:text-green-500 prose-h2:text-xl prose-h2:mt-5 prose-h2:mb-2 prose-pre:p-5 prose-pre:rounded-lg prose-pre:my-3 prose-p:mb-3 prose-p:mt-3 prose-ol:mb-3 prose-a:underline prose-a:decoration-teal-400 prose-a:underline-offset-4 prose-a:decoration-1 prose-a:text-slate-200 hover:prose-a:decoration-2 prose-h3:text-orange-400 prose-h3:text-lg prose-strong:text-violet-400 prose-ol:pl-7 prose-ol:list-decimal prose-ol:list-outside prose-blockquote:mb-3 prose-blockquote:object-center prose-blockquote:italic">
-        <h1 class="text-3xl mb-2 bg-gradient-to-r from-red-500 to-yellow-500 text-transparent bg-clip-text">{frontmatter.title}</h1>
-        <p class="text-sm text-slate-400 pb-6">Published on {date}</p>
+    <article class="tracking-wide max-w-3xl mx-auto p-5 border-t-2 pt-8 prose-p:text-lg prose-h2:text-green-500 prose-h2:text-2xl prose-h2:mt-5 prose-h2:mb-2 prose-pre:p-5 prose-pre:rounded-lg prose-pre:my-3 prose-p:mb-3 prose-p:mt-3 prose-ol:mb-3 prose-a:underline prose-a:decoration-teal-400 prose-a:underline-offset-4 prose-a:decoration-1 prose-a:text-slate-200 hover:prose-a:decoration-2 prose-h3:text-orange-400 prose-h3:text-xl prose-strong:text-violet-400 prose-ol:pl-7 prose-ol:list-decimal prose-ol:list-outside prose-blockquote:mb-3 prose-blockquote:object-center prose-blockquote:italic">
+        <h1 class="text-4xl mb-2 bg-gradient-to-r from-red-500 to-yellow-500 text-transparent bg-clip-text">{frontmatter.title}</h1>
+        <p class="text-base text-slate-400 pb-6">Published on {date}</p>
         <slot/>
     </article>
 </BaseLayout>
@@ -22,7 +22,7 @@ const date = new Date(frontmatter.date).toLocaleDateString('en-US', options);
         border-radius: 4px; /* Rounded corners */
         border-color: #ffffff;
         border-width: 1px;
-        font-size: 0.9em; /* Adjust font size as needed */
+        font-size: 0.7em; /* Adjust font size as needed */
         line-height: 1.2; /* Line height for readability */
         box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2); /* Subtle shadow */
     }
