--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,13 +1,14 @@
 ---
 import Social from "./Social.astro"
 ---
-<footer id="contact" class="flex pb-8 pt-5 justify-between items-center">
-    <div>
-        <p class="text-2xl mb-2">Ashutosh Patkar</p>
-        <div class="text-sm">
-            <p>Made Performant with Astro</p>
-            <p>and Beautiful with TailwindCSS</p>
-        </div>
+<footer id="contact" class="flex flex-col pb-8 pt-5 items-center space-y-6 md:flex-row md:justify-between md:space-y-0">
+  <div class="text-center md:text-left">
+    <p class="text-2xl mb-2">Ashutosh Patkar</p>
+    <div class="text-sm">
+      <p>Made Performant with Astro</p>
+      <p>and Beautiful with TailwindCSS</p>
     </div>
-    <Social />
+  </div>
+  <Social />
 </footer>
+
