tech and non tech blogs separate

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,16 +5,12 @@ const navLinks = [
         link: "/"
     },
     {
-        text: "Blog",
-        link: "/blog"
+        text: "TechBlog",
+        link: "/tech"
     },
     {
-        text: "Projects",
-        link: "/#projects"
-    },
-    {
-        text: "Contact",
-        link: "/#contact"
+        text: "Thoughts",
+        link: "/thoughts"
     }
 ]
 ---
