--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -4,5 +4,5 @@
 <div>
     <h1 class="text-3xl mb-8 bg-gradient-to-r from-yellow-500 to-orange-700 text-transparent bg-clip-text">Hey, I am Ashutosh</h1>
   <p class="mb-4">I am a <span class="text-white font-black">software engineer</span> with 1.5+ YoE currently working with the Infra Team at <span class="text-white font-black">PayPal</span>. My academic background includes a B.Tech degree from <span class="text-white font-black">IIT Kharagpur</span>.</p>
-  <p>I occasionally write about programming and share random thoughts about life on my <a href="/blog" class="underline underline-offset-4 decoration-2 hover:decoration-cyan-300 hover:decoration-2">blog.</a></p>
+  <p>I occasionally write about <a href="/tech" class="underline underline-offset-4 decoration-2 text-cyan-300 hover:decoration-cyan-300 hover:decoration-2">programming</a> and share random <a href="/thoughts" class="underline underline-offset-4 decoration-2 text-cyan-300 hover:decoration-cyan-300 hover:decoration-2">thoughts</a> about life on my blog.</p>
 </div>
