--- a/src/pages/thoughts.astro
+++ b/src/pages/thoughts.astro
@@ -5,6 +5,6 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 ---
 <BaseLayout>
     <section class="mx-auto p-5 max-w-3xl">
-        <PostList />
+        <PostList tag="thoughts"/>
     </section>
 </BaseLayout> 
