--- a/src/components/PostList.astro
+++ b/src/components/PostList.astro
@@ -1,10 +1,15 @@
 ---
 import PostPreview from "./PostPreview.astro";
+
+const { tag } = Astro.props;
 const allPosts = await Astro.glob('../pages/posts/*.md')
 const filteredPosts = allPosts.filter((post) => {
     if (import.meta.env.PROD && post.frontmatter.published != null && post.frontmatter.published==false){
         return false
     }
+  if (tag != null && (post.frontmatter.tags == null || !post.frontmatter.tags.includes(tag))){
+    return false
+  }
     return true
 })
 //@ts-ignore
@@ -18,7 +23,7 @@ const sortedPosts = filteredPosts.sort((a, b) => (new Date(b.frontmatter.date) -
                 class="flex items-center justify-between"
             >
                 <div class="flex-1 pr-4">
-                    <h2 class="text-lg font-semibold text-gray-900 dark:text-gray-100 group-hover:text-blue-600 dark:group-hover:text-blue-400 transition-colors">
+                    <h2 class="text-lg font-semibold text-gray-900 dark:text-gray-100 group-hover:text-cyan-300 dark:group-hover:text-blue-400 transition-colors">
                         {post.frontmatter.title}
                     </h2>
                 </div>
