--- a/src/components/PostList.astro
+++ b/src/components/PostList.astro
@@ -17,19 +17,19 @@ const sortedPosts = filteredPosts.sort((a, b) => (new Date(b.frontmatter.date) -
 ---
 <section class="space-y-4">
     {sortedPosts.map((post) => (
-        <div class="group border-b border-gray-200 dark:border-gray-800 pb-4 pt-2">
+        <div class="group border-b border-gray-800 pb-4 pt-2">
             <a 
                 href={post.url} 
                 class="flex items-center justify-between"
             >
                 <div class="flex-1 pr-4">
-                    <h2 class="text-lg font-semibold text-gray-900 dark:text-gray-100 group-hover:text-cyan-300 dark:group-hover:text-blue-400 transition-colors">
+                    <h2 class="text-lg font-semibold text-gray-100 group-hover:text-blue-400 transition-colors">
                         {post.frontmatter.title}
                     </h2>
                 </div>
                 <div class="flex items-center">
                     <svg 
-                        class="w-5 h-5 text-gray-400 dark:text-gray-600 group-hover:translate-x-1 transition-transform" 
+                        class="w-5 h-5 text-gray-600 group-hover:translate-x-1 transition-transform" 
                         xmlns="http://www.w3.org/2000/svg" 
                         viewBox="0 0 24 24" 
                         fill="none" 
