--- a/src/pages/thoughts.astro
+++ b/src/pages/thoughts.astro
@@ -6,5 +6,8 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 <BaseLayout>
     <section class="mx-auto p-5 max-w-3xl">
         <PostList tag="thoughts"/>
+        <div class="mt-10 text-lg font-bold border-t border-b py-5">
+            Disclaimer: I am not a good writer. So I take some help from A.I to make the writing a bit more readable and engaging, but I never ask it to generate ideas. I don't let A.I kill the essence of what I want to say, just beautify it a bit.
+        </div>
     </section>
 </BaseLayout> 
