--- a/src/pages/thoughts.astro
+++ b/src/pages/thoughts.astro
@@ -8,6 +8,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
         <PostList tag="thoughts"/>
         <div class="mt-10 text-lg font-bold border-t border-b py-5">
             Disclaimer: I am not a good writer. So I take some help from A.I to make the writing a bit more readable and engaging, but I never ask it to generate ideas. I don't let A.I kill the essence of what I want to say, just beautify it a bit.
+            Also please let me know if I made you think just a little bit deeper and made a positive influence in your life. Because that is my goal with these articles. 
         </div>
     </section>
 </BaseLayout> 
