--- a/src/components/Social.astro
+++ b/src/components/Social.astro
@@ -19,6 +19,11 @@ const socialLinks = [
         text: "instagram",
         icon: "fa-brands fa-instagram",
         link: "https://www.instagram.com/_holmes7_/"
+    },
+    {
+      text: "medium",
+      icon: "fa-brands fa-medium",
+      link: "https://medium.com/@ashutoshpatkar71"
     }
 ]
 ---
@@ -29,7 +34,7 @@ const socialLinks = [
       <a 
         href={obj.link} 
         class="text-2xl hover:text-sky-300"
-        aria-label={obj.name}
+        aria-label={obj.text}
       >
         <i class={`decoration-sky-300 decoration-2 underline-offset-8 hover:underline ${obj.icon}`}></i>
       </a>
