--- a/src/pages/thoughts.astro
+++ b/src/pages/thoughts.astro
@@ -7,7 +7,8 @@ import BaseLayout from "../layouts/BaseLayout.astro";
     <section class="mx-auto p-5 max-w-3xl">
         <PostList tag="thoughts"/>
         <div class="mt-10 text-lg font-bold border-t border-b py-5">
-            Disclaimer: I am not a good writer. So I take some help from A.I to make the writing a bit more readable and engaging, but I never ask it to generate ideas. I don't let A.I kill the essence of what I want to say, just beautify it a bit.
+            Disclaimer: I am not a writer or a poet. I just want to express my ideas beautifully. So I take some help from A.I to make the writing more readable and engaging or poetic. I do understand some theory on what makes writing nice to read or poetic, so I do use that knowledge for judgement.
+            But I never ask it to generate ideas. They are mine alone. I don't wish to take credit for the work that's not truly mine.
         </div>
     </section>
 </BaseLayout> 
