--- a/src/pages/thoughts.astro
+++ b/src/pages/thoughts.astro
@@ -4,11 +4,22 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 // future layout will be blog description etc on left, single col and all tags on right to click on
 ---
 <BaseLayout>
-    <section class="mx-auto p-5 max-w-3xl">
+    <section class="mx-auto p-5 max-w-3xl whitespace-pre-line">
         <PostList tag="thoughts"/>
-        <div class="mt-10 text-lg font-bold border-t border-b py-5">
-            Disclaimer: I am not a writer or a poet. I just want to express my ideas beautifully. So I take some help from A.I to make the writing more readable and engaging or poetic. I do understand some theory on what makes writing nice to read or poetic, so I do use that knowledge for judgement.
-            But I never ask it to generate ideas. They are mine alone. I don't wish to take credit for the work that's not truly mine.
+        <div class="mt-10 text-lg font-bold border-t border-b pb-5">
+            Welcome to my thoughts.
+
+            This blog is one of my desperate attempts to leave a legacy—an effort to achieve a kind of immortality.
+            My intention is to speak to a very specific kind of person, hoping that my thoughts will resonate with them, even in a small way.
+            Just as I've been shaped by the ideas of those who came before me, I hope a part of me might live on through the people I reach.
+            I know many of these ideas might turn out to be garbage—but I'm hopeful there are a few diamonds hidden among them.
+            Also, my thoughts and opinions can change when presented with good reasoning, so some of what you read here might be outdated. Think for yourself.
+
+            And if you don't like what you read—or don't understand it, which I suspect may often be the case—know that you are not the intended audience. I'm not trying to cater to the majority. Leave.
+
+            I am not a writer or a poet. I simply want to express my thoughts in a beautiful way. To make my writing more readable, engaging, or poetic, I use some help from AI.
+            However, I never ask AI to generate ideas—those are entirely my own. I don't want to take credit for anything that isn't truly mine.
+            I do understand a bit about what makes writing pleasant or poetic (I am trying to learn more on this), and I also use that knowledge to guide my choices.
         </div>
     </section>
 </BaseLayout> 
