--- a/src/pages/thoughts.astro
+++ b/src/pages/thoughts.astro
@@ -19,7 +19,7 @@ import BaseLayout from "../layouts/BaseLayout.astro";
 
             I am not a writer or a poet. I simply want to express my thoughts in a beautiful way. To make my writing more readable, engaging, or poetic, I use some help from AI.
             However, I never ask AI to generate ideas—those are entirely my own. I don't want to take credit for anything that isn't truly mine.
-            I do understand a bit about what makes writing pleasant or poetic (I am trying to learn more on this), and I also use that knowledge to guide my choices.
+            I do understand a bit about what makes writing pleasant or poetic (I am trying to learn more on this), so I also use that knowledge to guide my choices.
         </div>
     </section>
 </BaseLayout> 
